#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([laglan], [0.0.1])
AC_CONFIG_SUBDIRS([src])
AM_INIT_AUTOMAKE
AC_OUTPUT(Makefile src/Makefile)
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
